[tool.poetry]
authors     = ["ZhengYu, Xu <zen-xu@outlook.com>"]
description = ""
name        = "sunray"
readme      = "README.md"
version     = "0.1.0b0"

[tool.poetry.dependencies]
python = "^3.7,<3.12"
ray = [
  { version = "<2.8", extras = ["default"], python = "~3.7" },
  { version = "<2.11", extras = ["default"], python = "~3.8" },
  { version = "^2.11", extras = ["default"], python = "^3.9" },
]
typing-extensions = "^4.5.0"

[tool.poetry.group.test.dependencies]
deepdiff            = "^6.7.1"
importlib_metadata  = "6.7.0"
mypy                = { version = "^1.9", python = "^3.10" }
nox                 = "^2024.4.15"
pytest              = "<8.0"
pytest-cov          = "^4.1.0"
pytest-mypy-plugins = { version = "^3", python = "^3.10" }


[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]

[tool.ruff]
extend-exclude = [
  "docs/*",
  # External to the project's coding standards
  "tests/**/fixtures/*",
]
fix = true
line-length = 88
target-version = "py37"

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "ERA", # flake8-eradicate/eradicate
  "I",   # isort
  "N",   # pep8-naming
  "PIE", # flake8-pie
  "PGH", # pygrep
  "RUF", # ruff checks
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "TID", # flake8-tidy-imports
  "UP",  # pyupgrade
]
ignore = [
  "B904", # use 'raise ... from err'
  "B905", # use explicit 'strict=' parameter with 'zip()'
  "N818", # Exception name should be named with an Error suffix
]
unfixable = [
  "ERA", # do not auto remove commented out code
]

[tool.ruff.lint.isort]
force-single-line   = true
known-first-party   = ["sunray"]
lines-after-imports = 2
lines-between-types = 1
required-imports    = ["from __future__ import annotations"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
disable_error_code     = ["overload-overlap"]
explicit_package_bases = true
files                  = "sunray"
namespace_packages     = true
show_error_codes       = true
